Header knoppen toegevoegd en een winkelmandje toegevoegd

--- a/index.html
+++ b/index.html
@@ -4,17 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
+
   </head>
 
   <body>
     <header>
-      <nav></nav>
+      <nav>
+        <div>
+          <ul class="nav-knop">
+            <li>Home</li>
+            <li>Menu</li>
+            <li>Over ons</li>
+            <li>Contact</li>
+            <li>Login</li>
+          </ul>
+        </div>
+        <div class="winkelkar">
+          <img id="winkelkar" src="img/winkelkar.png" alt="winkelkar">
+        </div>
+      </nav>
     </header>
 
     <main>
       <section class="landingpage">
-        
+
       </section>
     </main>
 
