--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <header>
       <nav>
         <div>
+          <!-- De knoppen in de header -->
           <ul class="nav-knop">
             <li>Home</li>
             <li>Menu</li>
@@ -22,6 +23,7 @@
           </ul>
         </div>
         <div class="winkelkar">
+          <!-- Foto van een winkelkar in de nav -->
           <img id="winkelkar" src="img/winkelkar.png" alt="winkelkar">
         </div>
       </nav>
