Welkoms bericht toegevoegd

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
 
     <main>
       <section class="landingpage">
-
+        <div class="welkombericht">
+          <h1>Welkom</h1>
+          <h3>Heb je zien in iets lekkers kijk gerust veder op de website</h3>
+        </div>
       </section>
     </main>
 
